--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,8 @@ scikit-learn==1.7.2
 scipy==1.16.2
 threadpoolctl==3.6.0
 Werkzeug==3.1.3
+Flask==3.1.2
+scikit-learn==1.7.2
+numpy==2.3.3
+gunicorn==22.0.0
+
