--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,11 @@
-blinker==1.9.0
-click==8.2.1
 Flask==3.1.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.2
-MarkupSafe==3.0.2
+gunicorn==22.0.0
 numpy==2.3.3
 scikit-learn==1.7.2
 scipy==1.16.2
-threadpoolctl==3.6.0
-Werkzeug==3.1.3
-Flask==3.1.2
-scikit-learn==1.7.2
-numpy==2.3.3
-gunicorn==22.0.0
-flask
+sentence-transformers==2.7.0
+torch==2.3.1
 
-scikit-learn
 openai
 
 
