--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-Flask==3.1.2
-gunicorn==22.0.0
-numpy==2.3.3
 scikit-learn==1.7.2
-scipy==1.16.2
-sentence-transformers==2.7.0
-
-
+numpy==2.3.3
+gunicorn==22.0.0
+flask
+sentence-transformers
+scikit-learn
 openai
-
-
